Route plan CTAs to signup

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="logo"><img src="logo.png" alt="JobSprint logo"></div>
       <div class="cta">
         <a class="btn secondary" href="signup.html?mode=login">Log In</a>
-        <a class="btn primary" href="#pricing">₹999 / 90 days</a>
+        <a class="btn primary" href="/signup.html?plan=sprint">₹999 / 90 days</a>
       </div>
     </nav>
 
@@ -109,8 +109,7 @@
           <p class="sub">JobSprint helps you stay consistent, focused, and ready — turning your job hunt into a clear 90-day journey with visible progress.</p>
           <p class="sub">Because finding the right job isn’t about luck — it’s about building your own pipeline and following through until you close the deal.</p>
           <div class="hero-cta">
-            <!-- Replace href with your Razorpay Payment Page link when ready -->
-            <a class="btn primary" href="#pricing">Start Your 90-Day Sprint</a>
+            <a class="btn primary" href="/signup.html?plan=sprint">Start Your 90-Day Sprint</a>
             <a class="btn secondary" href="#comfort">Learn How It Works</a>
           </div>
         </div>
@@ -170,7 +169,7 @@
             <li>✔ Basic goal tracking & progress view</li>
           </ul>
           <p class="plan-desc">🟢 For light users testing JobSprint or running a short focused sprint.</p>
-          <div class="price-cta"><a href="javascript:void(0)" onclick="startPayment('lite')" class="btn secondary">Get Lite Access</a></div>
+          <div class="price-cta"><a href="/signup.html?plan=lite" class="btn secondary">Get Lite Access</a></div>
         </div>
         <div class="price-card highlight">
           <span class="badge">Most popular</span>
@@ -185,7 +184,7 @@
             <li>✔ Analytics & progress dashboard</li>
           </ul>
           <p class="plan-desc">🟢 For job seekers who want clarity, consistency, & progress tracking.</p>
-          <div class="price-cta"><a href="javascript:void(0)" onclick="startPayment('sprint')" class="btn primary">Start Your 90-Day Sprint</a></div>
+          <div class="price-cta"><a href="/signup.html?plan=sprint" class="btn primary">Start Your 90-Day Sprint</a></div>
         </div>
         <div class="price-card">
           <h3 class="plan-title">⚡ JobSprint Pro+ — ₹1499 / 90 days</h3>
@@ -230,58 +229,7 @@
       <p>© 2025 JobSprint. All rights reserved.</p>
     </footer>
   </div>
-  
-    <!-- Razorpay Payment Script -->
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <script>
-    const PLAN_DESCRIPTIONS = {
-      lite: '30-day JobSprint access',
-      sprint: '90-day JobSprint access',
-    };
 
-    async function startPayment(plan) {
-      try {
-        if (!PLAN_DESCRIPTIONS[plan]) {
-          throw new Error('Unknown plan selected');
-        }
-
-        const resp = await fetch('/api/create-order', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ plan }),
-        });
-        if (!resp.ok) throw new Error('Init failed');
-        const data = await resp.json();
-
-        const options = {
-          key: data.keyId,
-          amount: data.amount,
-          currency: data.currency,
-          name: 'JobSprint',
-          description: PLAN_DESCRIPTIONS[data.plan] || PLAN_DESCRIPTIONS[plan] || 'JobSprint access',
-          order_id: data.orderId,
-          theme: { color: '#0a66c2' },
-          handler: function (response){
-            const params = new URLSearchParams({
-              payment_id: response.razorpay_payment_id || ''
-            });
-            window.location.href = `/signup.html?${params.toString()}`;
-          },
-          prefill: {
-            name: '',
-            email: '',
-            contact: ''
-          }
-        };
-
-        const rzp = new Razorpay(options);
-        rzp.open();
-      } catch (e) {
-        alert('Could not start payment. Please try again.');
-        console.error(e);
-      }
-    }
-  </script>
 </body>
 </html>
 
