Add Sprint Readiness narrative screen

--- a/onboarding.html
+++ b/onboarding.html
@@ -648,7 +648,7 @@
           return;
         }
         alert("🎉 Onboarding complete! Redirecting...");
-        window.location.href = data.redirect_url || "/workspace.html";
+        window.location.href = data.redirect_url || "/sprint-readiness.html";
       } catch (err) {
         console.error(err);
         alert("Something went wrong. Please try again.");
